feat: opt out from nsfw tag

--- a/packages/note/src/styles/tailwind.css
+++ b/packages/note/src/styles/tailwind.css
@@ -149,6 +149,9 @@
     &[data-transition="true"] {
       @apply [&_img]:transition-[filter];
     }
+    img[data-nsfw="false"] {
+      filter: none;
+    }
   }
 
   [data-blur-nsfw="false"] .picture-field {
